Agregando Menu en boton hamburguesa

--- a/src/Styles/IconNav.css
+++ b/src/Styles/IconNav.css
@@ -1,12 +1,17 @@
 .icon_hamb{
     display: none;
 }
+.hr{
+    display: none;
+}
 
 @media (max-width:740px){
     .icon_hamb{
         display: block;
         height: 25px;
+        cursor: pointer;
     }
+
 }
 
 
