margin-top al error

--- a/src/Styles/Rewards.css
+++ b/src/Styles/Rewards.css
@@ -73,6 +73,10 @@
     .span_reward{
         display: none;
     }
+
+    .error{
+        margin-top: 3vh;
+    }
 }
 
 @media (max-width: 740px){
